--- a/EICODA/repositoryControllers/types.yaml
+++ b/EICODA/repositoryControllers/types.yaml
@@ -51,30 +51,30 @@ filterTypes:
 
 deploymentArtifacts:
   - name: SenderArtifact
-    image: eicoda/sender:latest
+    image: pstopper/eicoda-sender:latest
     type: Docker
     internalPipes: ["out"]
   - name: ReceiverArtifact
-    image: eicoda/receiver:latest
+    image: pstopper/eicoda-receiver:latest
     type: Docker
     internalPipes: ["in"]
   - name: RouterArtifact
-    image: eicoda/router:latest
+    image: pstopper/eicoda-router:latest
     type: Docker
     internalPipes: ["in", "outOne", "outTwo"]
   - name: MessageFilterArtifact
-    image: eicoda/message-filter:latest
+    image: pstopper/eicoda-message-filter:latest
     type: Docker
     internalPipes: ["in", "out"]
   - name: ResequencerArtifact
-    image: eicoda/resequencer:latest
+    image: pstopper/eicoda-resequencer:latest
     type: Docker
     internalPipes: ["in", "out"]
   - name: MessageTranslatorArtifact
-    image: eicoda/message-translator:latest
+    image: pstopper/eicoda-message-translator:latest
     type: Docker
     internalPipes: ["in", "out"]
   - name: ContentFilterArtifact
-    image: eicoda/content-filter:latest
+    image: pstopper/eicoda-content-filter:latest
     type: Docker
     internalPipes: ["in", "out"]
