--- a/EICODA/docker-compose.yaml
+++ b/EICODA/docker-compose.yaml
@@ -1,153 +1,13 @@
 services:
-  invoiceaggregator1:
+  orderprocessor:
     environment:
-    - in=amqp://admin:password@localhost:5672,InvoiceQueue
-    - out=amqp://admin:password@localhost:5672,ResultsQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoiceaggregator1-criteria:/etc/config/criteria
-  invoiceaggregator2:
+    - in=amqp://admin:password@localhost:5672,OrderQueue
+    image: pstopper/eicoda-receiver:latest
+    volumes: []
+  webshopbackend:
     environment:
-    - in=amqp://admin:password@localhost:5672,InvoiceQueue
-    - out=amqp://admin:password@localhost:5672,ResultsQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoiceaggregator2-criteria:/etc/config/criteria
-  invoiceaggregator3:
-    environment:
-    - in=amqp://admin:password@localhost:5672,InvoiceQueue
-    - out=amqp://admin:password@localhost:5672,ResultsQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoiceaggregator3-criteria:/etc/config/criteria
-  invoiceaggregator4:
-    environment:
-    - in=amqp://admin:password@localhost:5672,InvoiceQueue
-    - out=amqp://admin:password@localhost:5672,ResultsQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoiceaggregator4-criteria:/etc/config/criteria
-  invoiceaggregator5:
-    environment:
-    - in=amqp://admin:password@localhost:5672,InvoiceQueue
-    - out=amqp://admin:password@localhost:5672,ResultsQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoiceaggregator5-criteria:/etc/config/criteria
-  invoiceaggregator6:
-    environment:
-    - in=amqp://admin:password@localhost:5672,InvoiceQueue
-    - out=amqp://admin:password@localhost:5672,ResultsQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoiceaggregator6-criteria:/etc/config/criteria
-  invoicerequestora1:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestora1-criteria:/etc/config/criteria
-  invoicerequestora2:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestora2-criteria:/etc/config/criteria
-  invoicerequestora3:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestora3-criteria:/etc/config/criteria
-  invoicerequestora4:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestora4-criteria:/etc/config/criteria
-  invoicerequestora5:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestora5-criteria:/etc/config/criteria
-  invoicerequestora6:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestora6-criteria:/etc/config/criteria
-  invoicerequestorb1:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestorb1-criteria:/etc/config/criteria
-  invoicerequestorb2:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestorb2-criteria:/etc/config/criteria
-  invoicerequestorb3:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestorb3-criteria:/etc/config/criteria
-  invoicerequestorb4:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestorb4-criteria:/etc/config/criteria
-  invoicerequestorb5:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestorb5-criteria:/etc/config/criteria
-  invoicerequestorb6:
-    environment:
-    - out=amqp://admin:password@localhost:5672,InvoiceQueue
-    - criteria=/etc/config/criteria
-    image: pstopper/eicoda-message-translator:latest
-    volumes:
-    - invoicerequestorb6-criteria:/etc/config/criteria
+    - internalOrdersPipe=amqp://admin:password@localhost:5672,OrderQueue
+    image: pstopper/backend-container:latest
+    volumes: []
 version: "3"
-volumes:
-  invoiceaggregator1-criteria: {}
-  invoiceaggregator2-criteria: {}
-  invoiceaggregator3-criteria: {}
-  invoiceaggregator4-criteria: {}
-  invoiceaggregator5-criteria: {}
-  invoiceaggregator6-criteria: {}
-  invoicerequestora1-criteria: {}
-  invoicerequestora2-criteria: {}
-  invoicerequestora3-criteria: {}
-  invoicerequestora4-criteria: {}
-  invoicerequestora5-criteria: {}
-  invoicerequestora6-criteria: {}
-  invoicerequestorb1-criteria: {}
-  invoicerequestorb2-criteria: {}
-  invoicerequestorb3-criteria: {}
-  invoicerequestorb4-criteria: {}
-  invoicerequestorb5-criteria: {}
-  invoicerequestorb6-criteria: {}
+volumes: {}
