--- a/EICODA/fallstudien-deployments/studie3/fallstudie3-0.yaml
+++ b/EICODA/fallstudien-deployments/studie3/fallstudie3-0.yaml
@@ -17,26 +17,20 @@ filters:
   name: "WebShopBackend"
   host: "devKubernetes"
   type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  mappings: ["internalOrdersPipe:OrderQueue"]
 - id: 675071fa
   name: "OrderRouter"
   host: "devKubernetes"
   type: "Router"
-  criteria: "bla"
-  mappings:
-    - "in:OrderQueue"
-    - "outOne:HighPriceQueue"
-    - "outTwo:LowPriceQueue"
+  criteria: "routing.json"
+  mappings: ["in:OrderQueue", "outOne:HighPriceQueue", "outTwo:LowPriceQueue"]
 - id: e4a4a657
   name: "PremiumOrderProcessor"
   host: "devDockerCompose"
   type: "Receiver"
-  mappings:
-    - "in:HighPriceQueue"
+  mappings: ["in:HighPriceQueue"]
 - id: e4a4a6
   name: "NormalOrderProcessor"
   host: "devDockerCompose"
   type: "Receiver"
-  mappings:
-    - "in:LowPriceQueue"
+  mappings: ["in:LowPriceQueue"]
