--- a/EICODA-FilterType-Artifacts/transformation/contentFilter/package.json
+++ b/EICODA-FilterType-Artifacts/transformation/contentFilter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "content-filter",
   "version": "1.0.0",
-  "description": "Content Filter for AMQP",
+  "description": "EICODA Content Filter for AMQP",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
