--- a/EICODA-FilterType-Artifacts/routing/splitter/package.json
+++ b/EICODA-FilterType-Artifacts/routing/splitter/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "message-filter",
+  "name": "splitter",
   "version": "1.0.0",
-  "description": "EICODA Message Filter for AMQP",
+  "description": "EICODA Splitter for AMQP",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
