--- a/EICODA/docker-compose.yaml
+++ b/EICODA/docker-compose.yaml
@@ -1,13 +1,22 @@
 services:
-  orderprocessor:
+  testrouter:
     environment:
-    - in=amqp://admin:password@localhost:5672,OrderQueue
-    image: pstopper/eicoda-receiver:latest
-    volumes: []
-  webshopbackend:
+    - in=amqp://admin:password@localhost:5672,messagePipe,queue
+    - outOne=amqp://admin:password@localhost:5672,reutlingenPipe,queue
+    - outTwo=amqp://admin:password@localhost:5672,worldPipe,topic
+    - criteria=/etc/config/criteria
+    - mode=test
+    image: pstopper/eicoda-flexrouter:latest
+    volumes:
+    - C:\Users\pstopper\Documents\Master\Thesis\GithubRepo\EICODA\test-deployments\criteria.json:/etc/config/criteria
+  worldsender:
     environment:
-    - internalOrdersPipe=amqp://admin:password@localhost:5672,OrderQueue
-    image: pstopper/backend-container:latest
+    - out=amqp://admin:password@localhost:5672,messagePipe,queue
+    - 'data={"greeting": "Hallo Welt"}'
+    - interval=3000
+    - eventType=dummy
+    image: pstopper/eicoda-sender:latest
     volumes: []
 version: "3"
-volumes: {}
+volumes:
+  testrouter-criteria: {}
